// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyAwesomeApp > should match snapshot 1`] = `
<div>
  <div
    data-testid="div-app"
  >
    <h1
      data-testid="first-name-little"
    >
      Jose angel
    </h1>
    <h3>
      Gallardo
    </h3>
    <p
      class="mi-clase-favorita"
    >
      Metal Gear, Death Stranding, Half Life
    </p>
    <h1>
      No Activo
    </h1>
    <p>
      Calle falsa
    </p>
    <p
      style="background-color: rgb(250, 250, 250); border-radius: 20px; padding: 10px; margin-top: 30px;"
    >
      {"street":"Calle falsa","number":123,"country":"USA"}
    </p>
  </div>
</div>
`;

exports[`MyAwesomeApp > should match snapshot 2`] = `
<div
  data-testid="div-app"
>
  <h1
    data-testid="first-name-little"
  >
    Jose angel
  </h1>
  <h3>
    Gallardo
  </h3>
  <p
    class="mi-clase-favorita"
  >
    Metal Gear, Death Stranding, Half Life
  </p>
  <h1>
    No Activo
  </h1>
  <p>
    Calle falsa
  </p>
  <p
    style="background-color: rgb(250, 250, 250); border-radius: 20px; padding: 10px; margin-top: 30px;"
  >
    {"street":"Calle falsa","number":123,"country":"USA"}
  </p>
</div>
`;
